--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "ts": "tsc",
-    "sass": "cp -r ./styles ./dist",
+    "sass": "npx stylelint styles/**/*.scss",
     "clean": "bash scripts/clean-dist.sh",
     "transfer-files": "bash scripts/file-transfer.sh",
-    "build": "npm run clean && npm run ts && npm run sass",
+    "build": "npm run clean && npm run ts && npm run sass && npm run transfer-files",
     "publish": "npm publish --access public"
   },
   "repository": {
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/CipherIL/cosmo#readme",
   "devDependencies": {
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard-scss": "^10.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
